--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "water-level-report",
     "builds": [
-       { "src": "./server.js", "use": "@vercel/node" }
+       { "src": "./index.js", "use": "@vercel/node" }
     ],
     "routes": [
        { "src": "/(.*)", "dest": "/" }
